ext/Muldis-Rosetta/ : part 2 of renaming Muldis DB to Muldis Rosetta - most in-file changes
git-svn-id: http://svn.pugscode.org/pugs@20273 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/ext/Muldis-Rosetta/Changes
+++ b/ext/Muldis-Rosetta/Changes
@@ -1,4 +1,4 @@
-                                Muldis::DB
+                              Muldis::Rosetta
 ---------------------------------------------------------------------------
 
 2008-04-xx   Darren Duncan <perl@DarrenDuncan.net>
