--- a/ext/Muldis-Rosetta/README
+++ b/ext/Muldis-Rosetta/README
@@ -1,4 +1,4 @@
-                                Muldis::DB
+                              Muldis::Rosetta
 ---------------------------------------------------------------------------
 
 by Darren Duncan <perl@DarrenDuncan.net>
@@ -6,13 +6,13 @@ by Darren Duncan <perl@DarrenDuncan.net>
 PREFACE
 
 This distribution features the Perl 5 or 6 (depending on which copy of this
-README file you are reading) module named Muldis::DB (Full-featured truly
-relational DBMS in Perl) and its support structure.
+README file you are reading) module named Muldis::Rosetta (Full-featured
+truly relational DBMS in Perl) and its support structure.
 
-Muldis DB has 2 co-developed versions, which are written in native Perl 5
-and Perl 6 respectively, and which are distributed separately from each
-other.  But while the 2 versions would be similar, they are explicitly not
-intended to be drop-in substitutable for each other, as each would have
+Muldis Rosetta has 2 co-developed versions, which are written in native
+Perl 5 and Perl 6 respectively, and which are distributed separately from
+each other.  But while the 2 versions would be similar, they are explicitly
+not intended to be drop-in substitutable for each other, as each would have
 some API differences that optimizes it for its host language.  The actual
 Muldis D language specification document will be identical for both,
 though.
@@ -32,24 +32,25 @@ Read below for how to get support or keep up to date.
 
 DOCUMENTATION READING ORDER
 
-If you want to read all the Muldis DB documentation that exists now in
+If you want to read all the Muldis Rosetta documentation that exists now in
 this distribution, I recommend doing so in this order:
 
    1.       README
    2. (opt) Changes
-   3.       lib/Muldis/DB.pm
-   4.       lib/Muldis/DB/Interface.pm
-   5. (opt) lib/Muldis/DB/Validator.pm
-   6. (opt) lib/Muldis/DB/Engine/Example.pm
-   7.       lib/Muldis/DB/SeeAlso.pod
+   3.       lib/Muldis/Rosetta.pm
+   4.       lib/Muldis/Rosetta/Interface.pm
+   5. (opt) lib/Muldis/Rosetta/Validator.pm
+   6. (opt) lib/Muldis/Rosetta/Engine/Example.pm
+   7.       lib/Muldis/Rosetta/SeeAlso.pod
    8. (opt) TODO
 
 Then you can carry on with anything else.
 
 You may prefer the nicely HTML-formatted versions of the above, which are
-available at "http://search.cpan.org/dist/Muldis-DB/".
+available at "http://search.cpan.org/dist/Muldis-Rosetta/".
 
-I also suggest the Muldis-DB-Cookbook distribution, when that is available.
+I also suggest the Muldis-Rosetta-Cookbook distribution, when that is
+available.
 
 KEEPING UP TO DATE
 
@@ -58,12 +59,12 @@ all linked to through my website, "http://www.DarrenDuncan.net/", on the
 page called "Perl Libraries I Made" (name subject to change).
 
 For those of you that are interested in the bleeding edge of development, I
-have all parts of the Muldis DB project in one or more public
-repositories. The Perl 5 Muldis DB project is in a Git repository whose
-Git read-access url is "git://utsl.gen.nz/Muldis-DB" and whose Gitweb
-information url is at "http://utsl.gen.nz/gitweb/?p=Muldis-DB".  The Perl 6
-Muldis DB project is in a Subversion repository at
-"http://svn.pugscode.org/pugs/ext/Muldis-DB/".
+have all parts of the Muldis Rosetta project in one or more public
+repositories. The Perl 5 Muldis Rosetta project is in a Git repository
+whose Git read-access url is "git://utsl.gen.nz/Muldis-Rosetta" and whose
+Gitweb information url is at "http://utsl.gen.nz/gitweb/?p=Muldis-Rosetta".
+The Perl 6 Muldis Rosetta project is in a Subversion repository at
+"http://svn.pugscode.org/pugs/ext/Muldis-Rosetta/".
 
 You can download slightly older versions of all of my modules from the
 public CPAN archives at "http://www.cpan.org/authors/id/D/DU/DUNCAND/", or
@@ -74,10 +75,10 @@ an organized and searchable fashion.  Their main search site is at
 "http://search.cpan.org", and my own DUNCAND author page is at
 "http://search.cpan.org/search?author=DUNCAND".
 
-The main CPAN search site url for Muldis DB for Perl 5 is
-"http://search.cpan.org/dist/Muldis-DB/"; that is the url you should link
-to presently if you want something to consider the "home page" of
-Muldis DB; it is best to refer people there by default.
+The main CPAN search site url for Muldis Rosetta for Perl 5 is
+"http://search.cpan.org/dist/Muldis-Rosetta/"; that is the url you should
+link to presently if you want something to consider the "home page" of
+Muldis Rosetta; it is best to refer people there by default.
 
 You can download my oldest tarred and gzipped distributions from BACKPAN,
 at "http://history.perl.org/backpan/authors/id/D/DU/DUNCAND/", or from my
@@ -87,16 +88,16 @@ to the libdwg 1.0, first released on 2000 July 23.
 SUPPORT
 
 Several public email-based forums exist whose main topic is all
-implementations of the Muldis D language, especially the Muldis DB project,
-which they are named for.  They exist so that Muldis D / Muldis DB users
-can help each other, or that help coming from Muldis D / Muldis DB
-developers can be said once to many people, rather than to each
+implementations of the Muldis D language, especially the Muldis Rosetta
+reference implementation.  They exist so that Muldis D / Muldis Rosetta
+users can help each other, or that help coming from Muldis D / Muldis
+Rosetta developers can be said once to many people, rather than to each
 individually.  All of these you can reach via
 "http://mm.DarrenDuncan.net/mailman/listinfo".
 
 Alternately, you can purchase more advanced commercial support for various
-Muldis D implementations, particularly Muldis DB, from its author by way of
-Muldis Data Systems; see "http://www.muldis.com/" for details.
+Muldis D implementations, particularly Muldis Rosetta, from its author by
+way of Muldis Data Systems; see "http://www.muldis.com/" for details.
 
 FIN
 
