adding self to authors
git-svn-id: http://svn.pugscode.org/pugs@20304 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Adam "alias" Kennedy             (ADAMK)
 Adam Preble
 Adrian "adehohum" Taylor
 Adriano Ferreira                 (FERREIRA)
+Adrian "Auzon" Kreher
 AEvar Arnfjord Bjarmason         (AVAR)      Ævar Arnfjörð Bjarmason
 Agent Zhang                      (AGENT)     章亦春
 Ahmad M. Zawawi                     (AZAWAWI)   أحمد زواوي
