[STD_red] prelude.rb: disable old warnings; pass around $<sym>; dust.  STD_red_run: tolerate obsolete pod comments.  README: avoid non-.t files. std.rd.dev is an unmodified copy of std.rd, about to be updated with recent unfinished tweaks.
git-svn-id: http://svn.pugscode.org/pugs@20394 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/STD_red/README
+++ b/misc/STD_red/README
@@ -42,8 +42,10 @@ Re backtracking,
 
 
 To test the parsibility of a set of files:
-  find ../../v6/v6-KindaPerl6/t/kp6/ -type f | grep -v svn | sort | xargs -n 1 perl -e 'local $_=shift;$r=system("./STD_red_run $_ > /dev/null 2>&1");print "",($r == 0 ? "-" : "X")," ",$_,"\n";' > test-kp6
 
+  find ../../v6/v6-KindaPerl6/t/kp6/ -type f | grep -v svn | sort | xargs -n 1 perl -e 'exit if !/\.t$/; local $_=shift;$r=system("./STD_red_run $_ > /dev/null 2>&1");print "",($r == 0 ? "-" : "X")," ",$_,"\n";' > test-kp6
+
+  find ../../t/ -type f | grep -v svn | sort | xargs -n 1 perl -e 'exit if !/\.t$/; local $_=shift;$r=system("./STD_red_run $_ > /dev/null 2>&1");print "",($r == 0 ? "-" : "X")," ",$_,"\n";' > test-t
 
 
 RUBY YAML
