--- a/misc/STD_red/README
+++ b/misc/STD_red/README
@@ -43,9 +43,9 @@ Re backtracking,
 
 To test the parsibility of a set of files:
 
-  find ../../v6/v6-KindaPerl6/t/kp6/ -type f | grep -v svn | sort | xargs -n 1 perl -e 'exit if !/\.t$/; local $_=shift;$r=system("./STD_red_run $_ > /dev/null 2>&1");print "",($r == 0 ? "-" : "X")," ",$_,"\n";' > test-kp6
+  find ../../v6/v6-KindaPerl6/t/kp6/ -type f | grep -v svn | sort | xargs -n 1 perl -e 'local $_=shift;exit if !/\.t$/;$r=system("./STD_red_run $_ > /dev/null 2>&1");print "",($r == 0 ? "-" : "X")," ",$_,"\n";' > test-kp6
 
-  find ../../t/ -type f | grep -v svn | sort | xargs -n 1 perl -e 'exit if !/\.t$/; local $_=shift;$r=system("./STD_red_run $_ > /dev/null 2>&1");print "",($r == 0 ? "-" : "X")," ",$_,"\n";' > test-t
+  find ../../t/ -type f | grep -v svn | sort | xargs -n 1 perl -e 'local $_=shift;exit if !/\.t$/;$r=system("./STD_red_run $_ > /dev/null 2>&1");print "",($r == 0 ? "-" : "X")," ",$_,"\n";' > test-t
 
 
 RUBY YAML
