--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ AEvar Arnfjord Bjarmason         (AVAR)      Ævar Arnfjörð Bjarmason
 Agent Zhang                      (AGENT)     章亦春
 Ahmad M. Zawawi                     (AZAWAWI)   أحمد زواوي
 Ailin "Nei" Nemui
+Alex "Eevee" Munroe
 Aldo "dada" Calpini              (ACALPINI)
 Alin "alinbsp" Iacob             (ALIN)
 Allison Randal                   (ARANDAL)
