--- a/misc/elf/README
+++ b/misc/elf/README
@@ -1,12 +1,105 @@
-Running tests
+OVERVIEW
+
+Elf is a p6 compiler.
+
+The currently recommended version is:
+  elf_e  (because elf_f isn't ready yet).
+
+elf_e --help  for more info.
+
+INSTALL
+
+The elf executable is generic perl 5.
+It can be called from any directory.  It can be renamed.
+It can be moved to a different directory, but expects to find its STD_red
+parser in either ../STD_red or elf_X_src/STD_red, relative to the
+directory of the executable, and depending on whether it's on active
+development or slushy/frozen.
+
+STD_red requires ruby 1.9.  See it's README for installation info.
+
+RUNNING TESTS
 
   You can run a couple of tests with
     prove --exec 'perl elf_d' - < TESTS
   If you find that any other tests run please put them into TESTS.
 
-Tips
+TIPS
 
     eval_perl5('sub{print Data::Dumper::Dumper($_[0])}').($n);
+
+
+VERSIONS
+
+elf_f
+Purpose:
+  Use improved STD_red.
+  Start working on t/ .
+  Create PreludeP5 - p6 with p5 inline (agnostic to exact p5 backend via api).
+  Drop support for compilation by elf_d.
+Maybe:
+  Branches - additional and renamed: Good / Main / Faster.(?)
+Comparison: Like elf_e, but new parser version.
+Written in: elf_e dialect, but likely to become self levitating,
+  to permit rapid parsetree changes.
+Can be compiled by: elf_f, and for now elf_e.
+Linkages: none.
+Status: active development.
+
+elf_e
+Purpose: Using IR analysis to clean up the emitted runtime.
+  sub decls no longer global.
+  Start of p6 Prelude.
+  Addressed some other inconvenient implementation limitations.(What?)
+Comparison: Like elf_d.
+Written in: elf_d dialect.
+Can be compiled by: elf_e, elf_d.
+Linkages: uses a couple of files from elf_d.
+  CommandLine.pm EmitNoMooseP5.pm Match.pm Parser.pm
+Status: slushy.
+
+OLD VERSIONS
+
+elf_d
+Purpose: New IR.  New metaprogramming infrastructure.
+Comparison:
+  Like elf_c, but with new IR nodes.
+  @ISA can be incrementally extended.
+Written in: elf_c dialect.
+Can be compiled by: elf_d, elf_c.
+Status: frozen.
+
+elf_c
+Purpose: Refactored with has().  Added use().
+Comparison: Like elf_b, but written in elf_b p6, not elf_a p6 (basically +has).
+Written in: elf_b dialect.
+Emits: Currently same as elf_b, but that may change. (Did it?)
+Can be compiled by: elf_c only.
+Linkages:
+  ast_handlers and ir_nodes are copies of those in std_b.
+  They can't be regenerated, but only recopied by hand.
+  The hope is elf_c won't remain active long enough for that to be a problem.
+Status: frozen.
+
+elf_b
+Purpose: Switch implementation language from p5 to p6.
+Comparison: Like elf_a, but written in p6.
+Written in: p6, elf_a dialect.
+Emits: Slighly less simple and less fast p5 than elf_a.
+Can be compiled by: elf_b, elf_a.
+Linkages:
+  Uses elf_a ast_handlers, mechanically massaged into p6.
+  Uses elf_a's copy of STD_red.
+Status: frozen.
+
+elf_a
+Why: First step.
+Written in: p5
+Emits: Simple and fast p5.
+Status: frozen.
+
+
+OTHER
 
 A development story (a tale of two compilers)
 
@@ -39,66 +132,3 @@ A development story (a tale of two compilers)
   hot-swapped at runtime.  That's why there are conceptually two
   compilers.  And $*compiler0, $*compiler1, $*emitter0, $*emitter1, etc.
 
-
-Cast of Characters
-
-After elf_d - subsequent objectives:
- Sufficient IR analysis for near-term backend goals.
- Facilitate start of various backends - smop, conformant p5, maybe ruby.
- Facilitate other components:
-   Prelude.
-   regex.
-   Better command line.
-   Start of STD5 integration.
-
-elf_e
-Purpose: Using IR analysis to clean up the emitted runtime.
-  sub decls no longer global.
-Maybe:
-  Address some other inconvenient implementation limitations.
-  Start of p6 Prelude.
-  Change to plugin architecture?
-Comparison: Like elf_d.
-Written in: elf_d dialect.
-Can be compiled by: elf_e, elf_d.
-Linkages:
-  Currently using many elf_d files.
-Status: active development.
-
-elf_d
-Purpose: New IR.  New metaprogramming infrastructure.
-Comparison:
-  Like elf_c, but with new IR nodes.
-  @ISA can be incrementally extended.
-Written in: elf_c dialect.
-Can be compiled by: elf_d, elf_c.
-Status: active development, but getting near slush.
-
-elf_c
-Purpose: Refactored with has().  Added use().
-Comparison: Like elf_b, but written in elf_b p6, not elf_a p6 (basically +has).
-Written in: elf_b dialect.
-Emits: Currently same as elf_b, but that may change.
-Can be compiled by: elf_c only.
-Linkages:
-  ast_handlers and ir_nodes are copies of those in std_b.
-  They can't be regenerated, but only recopied by hand.
-  The hope is elf_c won't remain active long enough for that to be a problem.
-Status: slushy.
-
-elf_b
-Purpose: Switch implementation language from p5 to p6.
-Comparison: Like elf_a, but written in p6.
-Written in: p6, elf_a dialect.
-Emits: Slighly less simple and less fast p5 than elf_a.
-Can be compiled by: elf_b, elf_a.
-Linkages:
-  Uses elf_a ast_handlers, mechanically massaged into p6.
-  Uses elf_a's copy of STD_red.
-Status: slushy.
-
-elf_a
-Why: First step.
-Written in: p5
-Emits: Simple and fast p5.
-Status: slushy.
