[STD_red] README: Add link and greater detail, to the suggestion of which ruby version to use.
git-svn-id: http://svn.pugscode.org/pugs@20414 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/STD_red/README
+++ b/misc/STD_red/README
@@ -1,7 +1,13 @@
 A ruby transliteration of src/perl6/STD.pm
 
+INSTALL
+
 The release of ruby 1.9.0 (dated late December '07) is recommended.
 It may, or may not, also work with ruby 1.8.
+
+http://www.ruby-lang.org/en/news/2007/12/25/ruby-1-9-0-released/
+$ ruby --version
+ruby 1.9.0 (2007-12-25 revision 14709) [...]
 
 EXAMPLE
   ./STD_red_run -e 42
