--- a/AUTHORS
+++ b/AUTHORS
@@ -53,6 +53,7 @@ Chaddaï "Jedaï" Fouché
 Cheng-Lung Sung                  (CLSUNG)    宋政隆
 Chia-Liang Kao                   (CLKAO)     高嘉良
 Chip Salzenberg                  (CHIPS)
+Chris Fields
 Chris Jeris
 Christoph Buchetmann
 Christopher Malon                (OFUN)
